--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "1.0.5"
+version = "2.0.0"
 group = "de.erdbeerbaerlp.customServerMessages" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "customServerMessages"
 
@@ -54,7 +54,7 @@ processResources {
 jar {
     manifest {
         attributes([
-                'FMLAT': 'MODID_at.cfg',
+                'FMLAT': 'servermsgs_at.cfg',
                 'Maven-Artifact': "${project.group}:${project.archivesBaseName}:${project.version}",
                 'Timestamp': System.currentTimeMillis()
         ])
