--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,27 @@ buildscript {
     repositories {
         jcenter()
         maven { url = "http://files.minecraftforge.net/maven"}
+        maven {
+            name = 'sponge'
+            url = 'https://repo.spongepowered.org/maven'
+        }
     }
     dependencies {
+        classpath 'org.spongepowered:mixingradle:0.6-SNAPSHOT'
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath "com.github.jengelman.gradle.plugins:shadow:4.0.4"
     }
 }
+plugins {
+    id "com.matthewprenger.cursegradle" version "1.1.0"
+}
+apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'org.spongepowered.mixin'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "2.0.0"
+version = "3.0.0"
 group = "de.erdbeerbaerlp.customServerMessages" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "customServerMessages"
 
@@ -19,7 +30,18 @@ sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse t
 compileJava {
     sourceCompatibility = targetCompatibility = '1.8'
 }
-
+repositories {
+    jcenter()
+    maven {
+        name = 'sponge'
+        url = 'https://repo.spongepowered.org/maven'
+    }
+    maven { url 'https://jitpack.io' }
+}
+configurations {
+    embed
+    compile.extendsFrom(embed)
+}
 minecraft {
     version = "1.12.2-14.23.4.2705"
     runDir = "run"
@@ -32,7 +54,22 @@ minecraft {
     mappings = "snapshot_20171003"
     makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
-
+reobf {
+    shadowJar { mappingType = 'SEARGE' }
+}
+shadowJar {
+    classifier = '1.12'
+    configurations = [project.configurations.embed]
+}
+dependencies {
+    embed("org.spongepowered:mixin:0.8-SNAPSHOT") {
+        transitive = false
+    }
+}
+tasks.build.dependsOn reobfShadowJar
+mixin {
+    add sourceSets.main, 'mixins.customservermsgs.refmap.json'
+}
 processResources {
     // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
@@ -52,11 +89,15 @@ processResources {
     }
 }
 jar {
+    classifier '1.12'
     manifest {
         attributes([
-                'FMLAT': 'servermsgs_at.cfg',
                 'Maven-Artifact': "${project.group}:${project.archivesBaseName}:${project.version}",
-                'Timestamp': System.currentTimeMillis()
+                'Timestamp': System.currentTimeMillis(),
+                'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
+                'MixinConfigs': 'mixins.customservermsgs.init.json',
+                "ForceLoadAsMod": "true",
+                'FMLCorePluginContainsFMLMod': 'true'
         ])
     }
 }
