--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
-changelog=Full rewrite based on mixin\nAdded World Time parameters to MOTD and Player list hover\nAdded Spam kick, Idle timeout kick and outdated client/server messages\nFixed timed out leave message\n
+changelog=Server startup counter now averages four start times instead of just using the last one
