--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,22 @@
 buildscript {
     repositories {
         jcenter()
-        maven { url = "http://files.minecraftforge.net/maven"}
+        mavenCentral()
+        maven { url = "http://files.minecraftforge.net/maven" }
         maven {
             name = 'sponge'
             url = 'https://repo.spongepowered.org/maven'
         }
+        repositories {
+            maven {
+                url "https://plugins.gradle.org/m2/"
+
+            }
+        }
     }
     dependencies {
-        classpath 'org.spongepowered:mixingradle:0.6-SNAPSHOT'
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
         classpath "com.github.jengelman.gradle.plugins:shadow:4.0.4"
     }
 }
@@ -17,12 +24,12 @@ plugins {
     id "com.matthewprenger.cursegradle" version "1.1.0"
 }
 apply plugin: 'com.github.johnrengelman.shadow'
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "3.0.1"
+version = "4.0.0"
 group = "de.erdbeerbaerlp.customServerMessages" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "customServerMessages"
 
@@ -43,62 +50,82 @@ configurations {
     compile.extendsFrom(embed)
 }
 minecraft {
-    version = "1.12.2-14.23.5.2847"
-    runDir = "run"
-    
-    // the mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   snapshot are built nightly.
-    // stable_#            stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not always work.
-    // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20171003"
-    makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    mappings channel: 'snapshot', version: '20200612-1.15.1'
+    //accessTransformer = file('build/resources/main/META-INF/accesstransformer.cfg')
+
+    // Default run configurations.
+    // These can be tweaked, removed, or duplicated as needed.
+    runs {
+        client {
+            workingDirectory project.file('run')
+
+            // Recommended logging data for a userdev environment
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+            // Recommended logging level for the console
+            property 'forge.logging.console.level', 'debug'
+
+            mods {
+                dcintegration {
+                    source sourceSets.main
+                }
+            }
+        }
+
+        server {
+            workingDirectory project.file('run')
+
+            // Recommended logging data for a userdev environment
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+            // Recommended logging level for the console
+            property 'forge.logging.console.level', 'debug'
+
+            mods {
+                dcintegration {
+                    source sourceSets.main
+                }
+            }
+        }
+    }
 }
 reobf {
-    shadowJar { mappingType = 'SEARGE' }
+    shadowJar {
+        dependsOn tasks.createMcpToSrg
+        mappings = tasks.createMcpToSrg.outputs.files.singleFile
+    }
 }
 shadowJar {
-    classifier = '1.12'
+    classifier = '1.15'
     configurations = [project.configurations.embed]
+    relocate "com.google", "csmshadow.com.google"
+    relocate "com.moandjiezana", "csmshadow.com.moandjiezana"
 }
 dependencies {
-    embed("org.spongepowered:mixin:0.8-SNAPSHOT") {
+    minecraft 'net.minecraftforge:forge:1.15.2-31.2.9'
+    compile("org.spongepowered:mixin:0.8-SNAPSHOT") {
         transitive = false
     }
+    embed "com.github.ErdbeerbaerLP:toml4j:wip-SNAPSHOT"
 }
 tasks.build.dependsOn reobfShadowJar
 mixin {
     add sourceSets.main, 'mixins.customservermsgs.refmap.json'
 }
-processResources {
-    // this will ensure that this task is redone when the versions change.
-    inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
-
-    // replace stuff in mcmod.info, nothing else
-    from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
-                
-        // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version
-    }
-        
-    // copy everything else except the mcmod.info
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
-    }
-}
 jar {
-    classifier '1.12'
+    classifier = "1.15"
     manifest {
         attributes([
-                'FMLAT': 'customservermsgs_at.cfg',
-                'Maven-Artifact': "${project.group}:${project.archivesBaseName}:${project.version}",
-                'Timestamp': System.currentTimeMillis(),
-                'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
-                'MixinConfigs': 'mixins.customservermsgs.init.json',
-                "ForceLoadAsMod": "true",
-                'FMLCorePluginContainsFMLMod': 'true'
+                'Maven-Artifact'          : "${project.group}:${project.archivesBaseName}:${project.version}",
+                'Timestamp'               : System.currentTimeMillis(),
+                "Specification-Title"     : "customservermsgs",
+                "Specification-Vendor"    : "customservermsgs",
+                "Specification-Version"   : "1", // We are version 1 of ourselves
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : "${version}",
+                "Implementation-Vendor"   : "customservermsgs",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                'MixinConnector': 'de.erdbeerbaerlp.customServerMessages.CSMMixinConnector'
         ])
     }
 }
@@ -110,11 +137,15 @@ curseforge {
             id = '301614'
             changelog = project.changelog
             releaseType = 'beta'
-            addGameVersion '1.12.2'
-            addGameVersion '1.12.1'
-            addGameVersion '1.12'
+            addGameVersion '1.15.2'
             mainArtifact(jar) {
-                displayName = "CustomServerMessages-$version (MC 1.12)"
+                displayName = "CustomServerMessages-$version (MC 1.15)"
+            }
+            relations {
+                requiredDependency 'mixinbootstrap'
+            }
+            options {
+                forgeGradleIntegration = false // defaults to true
             }
         }
     }
