--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
-changelog=Server startup counter now averages four start times instead of just using the last one
+org.gradle.daemon=false
+changelog=Ported to 1.15\nAdded server starting server icon\nAdded an way to save the server icon in an different path
