--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-changelog=Ported to 1.15\nAdded server starting server icon\nAdded an way to save the server icon in an different path
+changelog=Maybe fixed an mixin apply failed crash while starting
