--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-changelog=Maybe fixed an mixin apply failed crash while starting
+changelog=Port to 1.16
