--- a/build.gradle
+++ b/build.gradle
@@ -1,93 +1,45 @@
 buildscript {
     repositories {
-        jcenter()
+        maven { url = 'https://files.minecraftforge.net/maven' }
         mavenCentral()
-        maven { url = "http://files.minecraftforge.net/maven" }
-        maven {
-            name = 'sponge'
-            url = 'https://repo.spongepowered.org/maven'
-        }
-        repositories {
-            maven {
-                url "https://plugins.gradle.org/m2/"
-
-            }
-        }
     }
+
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
-        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
-        classpath "com.github.jengelman.gradle.plugins:shadow:4.0.4"
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1+', changing: true
+        classpath 'org.spongepowered:mixingradle:0.7.32'
     }
 }
 plugins {
-    id "com.matthewprenger.cursegradle" version "1.1.0"
+    id "com.matthewprenger.cursegradle" version "1.4.0"
+    id 'maven-publish'
+    id 'java'
+    id 'com.github.johnrengelman.shadow' version "7.0.0"
 }
-apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "4.0.1"
+version = "5.0.0"
 group = "de.erdbeerbaerlp.customServerMessages" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "customServerMessages"
 
-sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
-compileJava {
-    sourceCompatibility = targetCompatibility = '1.8'
-}
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 repositories {
-    jcenter()
     maven {
         name = 'sponge'
         url = 'https://repo.spongepowered.org/maven'
     }
     maven { url 'https://jitpack.io' }
+    maven { url "https://repo.erdbeerbaerlp.de/repository/maven-public/" }
 }
 configurations {
     embed
-    compile.extendsFrom(embed)
+    compileOnly.extendsFrom(embed)
 }
 minecraft {
-    mappings channel: 'snapshot', version: '20200612-1.15.1'
+    mappings channel: 'official', version: '1.19.2'
     //accessTransformer = file('build/resources/main/META-INF/accesstransformer.cfg')
-
-    // Default run configurations.
-    // These can be tweaked, removed, or duplicated as needed.
-    runs {
-        client {
-            workingDirectory project.file('run')
-
-            // Recommended logging data for a userdev environment
-            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
-
-            // Recommended logging level for the console
-            property 'forge.logging.console.level', 'debug'
-
-            mods {
-                dcintegration {
-                    source sourceSets.main
-                }
-            }
-        }
-
-        server {
-            workingDirectory project.file('run')
-
-            // Recommended logging data for a userdev environment
-            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
-
-            // Recommended logging level for the console
-            property 'forge.logging.console.level', 'debug'
-
-            mods {
-                dcintegration {
-                    source sourceSets.main
-                }
-            }
-        }
-    }
 }
 reobf {
     shadowJar {
@@ -96,24 +48,24 @@ reobf {
     }
 }
 shadowJar {
-    classifier = '1.15'
+    classifier = '1.19.2'
     configurations = [project.configurations.embed]
-    relocate "com.google", "csmshadow.com.google"
+    relocate "com.google.gson", "csmshadow.com.google.gson"
     relocate "com.moandjiezana", "csmshadow.com.moandjiezana"
 }
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.15.2-31.2.9'
-    compile("org.spongepowered:mixin:0.8-SNAPSHOT") {
-        transitive = false
-    }
-    embed "com.github.ErdbeerbaerLP:toml4j:wip-SNAPSHOT"
+    minecraft 'net.minecraftforge:forge:1.19.2-43.1.47'
+
+    // Apply Mixin AP
+    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+    embed("de.erdbeerbaerlp:toml4j:2073e86")
 }
 tasks.build.dependsOn reobfShadowJar
 mixin {
     add sourceSets.main, 'mixins.customservermsgs.refmap.json'
 }
 jar {
-    classifier = "1.15"
+    classifier = "1.19.2"
     manifest {
         attributes([
                 'Maven-Artifact'          : "${project.group}:${project.archivesBaseName}:${project.version}",
@@ -125,7 +77,7 @@ jar {
                 "Implementation-Version"  : "${version}",
                 "Implementation-Vendor"   : "customservermsgs",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                'MixinConnector': 'de.erdbeerbaerlp.customServerMessages.CSMMixinConnector'
+                'MixinConnector': 'de.erdbeerbaerlp.customServerMessages.MixinConnector'
         ])
     }
 }
@@ -137,15 +89,9 @@ curseforge {
             id = '301614'
             changelog = project.changelog
             releaseType = 'beta'
-            addGameVersion '1.15.2'
+            addGameVersion '1.19.2'
             mainArtifact(jar) {
-                displayName = "CustomServerMessages-$version (MC 1.15)"
-            }
-            relations {
-                requiredDependency 'mixinbootstrap'
-            }
-            options {
-                forgeGradleIntegration = false // defaults to true
+                displayName = "CustomServerMessages-$version (MC 1.19.2)"
             }
         }
     }
