--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,10 +9,11 @@ modLoader="javafml" #mandatory
 loaderVersion="[31,)" #mandatory (26 is current forge version)
 # A URL to refer people to when problems occur with this mod
 issueTrackerURL="https://github.com/ErdbeerbaerLP/Discord-Chat-Integration/issues" #optional
+license="MIT License"
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 # The modid of the mod
-modId="servermsgs" #mandatory
+modId="customservermessages" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 version="${file.jarVersion}" #mandatory
  # A display name for the mod
@@ -24,9 +25,9 @@ authors="ErdbeerbaerLP" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
 '''
-[[dependencies.servermsgs]]
+[[dependencies.customservermessages]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.15.2]"
+    versionRange="[1.19.2]"
     ordering="NONE"
     side="SERVER"
