--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-changelog=Went to redo this for 1.19.2
+changelog=Early 1.19 release, some stuff will change soon
